2008-02-28  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #7502: Show Sitename on Login screen (Thanks to Steffen Kamper)

2008-02-28  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #7630: Several problems with locking API (t3lib_lock)
	* Fixed bug #7700: Fatal error if caching is disabled and locking enabled (follow-up on bug #7630)
	* Fixed bug #5252: Pages with "Hide in menu" checked use normal page icon in list module (Thanks to Andreas Wagner)
	* Fixed bug #7693: New page wizard ignores "hide in menu" flag for page icons (Thanks to Christian Kuhn)

2008-02-27  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7697: Syntax error raised by Mozilla 1.7 when loading htmlArea RTE
	* Fixed bug #7698: htmlArea RTE fails to load due to missing toolbar constraints
	* Fixed bug #7690: Firefox 1.5 and Mozilla 1.7 crash when htmlArea RTE is in hidden tab

2008-02-27  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix feature #6601: issues with rootline HMENUs on a translated page

2008-02-27  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #7607: Add post processing hooks for Frontend Editing

2008-02-26  Michael Stucki  <michael@typo3.org>

	* Rename t3lib_install::getFieldDefinitions_sqlContent() to t3lib_install::getFieldDefinitions_fileContent() and provide a wrapper for backwards compatibility
	* Lots of white-space fixes (to comply with old patch)
	* Lots of non-functional changes (to comply with old patch)

2008-02-26  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #7637: Page tree fails to reload properly if page was manipulated
	* Fixed bug #7523: Description of properties is missing in install tool (Thanks to Steffen Kamper)

2008-02-26  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Added feature #7667: htmlArea RTE: Usability improvements in table operations
	* Fixed bug #7671: htmlArea RTE configuration variable "Add default User TSonfig RTE configuration" not working. Thanks to Jan Persson.