@@ -1,3 +1,7 @@
+2008-02-28  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
+
+	* Fixed bug #7684: htmlArea RTE: Cursor positioning when creating new table
+
 2008-02-27  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
 
 	* Fixed bug #7697: Syntax error raised by Mozilla 1.7 when loading htmlArea RTE
