@@ -1,3 +1,7 @@
+2008-02-28  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
+
+	* Fixed bug #7684: htmlArea RTE: Cursor positioning when creating new table
+
 2008-02-28  Ingmar Schlecht  <ingmar@typo3.org>
 
 	* Fixed bug #7502: Show Sitename on Login screen (Thanks to Steffen Kamper)
